fix: underline hovers are white in dark mode in NavColMenu expand

--- a/src/app/_components/navbar/navbar.module.css
+++ b/src/app/_components/navbar/navbar.module.css
@@ -34,7 +34,7 @@
   height: 2px;
   background-color: var(
     --underline-color
-  ); /* for edge nav items that need blue underline */
+  ); /* for edge cases where nav items need blue underline */
   transform: scaleX(0);
 }
 
